# 50cc

./: .clang-format  .clang-tidy  .clangd  .clangd-format  .gitignore  50cc  CMakeLists.txt  LICENSE  README.md
install/: README.md  freebsd.sh  linux.sh  macos.sh  windows.ps
src/: 50cc.c
